[package]
name = "bloom-cmd"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"]}
docopt = "1.0"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
ethereum-types = "0.9.0"
hex = "0.3.1"
parity-bytes = "0.1"
rlp = "0.4"
rustc-hex = "2.1.0"
serde_derive = "1.0"
threadpool = "1.7"
env_logger = "0.5"
parity-wordlist= "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
sha3 = "0.8"
structopt = "0.3.8"
edit-distance="1.0"
log="0.4"
web3 = { version = "0.11.0", default-features = false, features = ["http"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
secp256k1 = {version = "0.17", features = ["recovery"] }
serde_json = "1.0"
num-traits = "0.2"
